# MutiverseOdometry

./: README.md
src/demos_standalone/: CMakeLists.txt  package.xml  run_VLO_ComboVLO_pipeline.cpp
src/demos_standalone/config/: config.yaml
src/demos_standalone/reading_utils/: config_reader.hpp
src/lib/common_vlo/: CMakeLists.txt  package.xml
src/lib/common_vlo/include/: IFeatureDetector.hpp  IFrame.hpp  IOdometer.hpp  ISensor.hpp  common_vlo.hpp  utils_vlo.hpp
src/lib/common_vlo/include/SanityChecker/: LineDetector.hpp  SanityChecker.hpp
src/lib/common_vlo/include/geometry/: geometry.hpp
src/lib/common_vlo/src/: IOdometer.cpp  utils_vlo.cpp
src/lib/common_vlo/src/SanityChecker/: LineDetector.cpp  SanityChecker.cpp
src/lib/common_vlo/src/geometry/: geometry.cpp
src/lib/lidar_odometry_lib/: CMakeLists.txt  README.md  package.xml
src/lib/lidar_odometry_lib/config/: config.yaml  config_point2plane.yaml  config_point2point.yaml
src/lib/lidar_odometry_lib/include/: ILidarOdometer.hpp  LO_FrameToFrame_ImageBasedPlaneSegmentation.hpp  LO_FrameToFrame_PlaneSegmentation.hpp  LidarOdometerFrameToFrame.hpp
src/lib/lidar_odometry_lib/include/GicpLO/: GicpLO.hpp
src/lib/lidar_odometry_lib/include/GicpLO/fast_gicp/gicp/: fast_gicp.hpp  fast_gicp_st.hpp  fast_vgicp.hpp  fast_vgicp_cuda.hpp
src/lib/lidar_odometry_lib/include/GicpLO/fast_gicp/gicp/experimental/: fast_gicp_mp.hpp  fast_gicp_mp_impl.hpp
src/lib/lidar_odometry_lib/include/GicpLO/fast_gicp/gicp/impl/: fast_gicp_impl.hpp  fast_gicp_st_impl.hpp  fast_vgicp_cuda_impl.hpp  fast_vgicp_impl.hpp
src/lib/lidar_odometry_lib/include/LeGO-LOAM/: featureAssociation.h  imageProjection.h  mapOptimization.h
src/lib/lidar_odometry_lib/include/NdtLO/: NdtLO.hpp
src/lib/lidar_odometry_lib/include/TeaserLO/: TeaserFeaturesLO.hpp  TeaserLO.hpp
src/lib/lidar_odometry_lib/include/lidar_odometry/: LidarFrame.hpp  point_cloud_analysis.hpp
src/lib/lidar_odometry_lib/src/: ILidarOdometer.cpp  LO_FrameToFrame_PlaneSegmentation.cpp  LO_FrameToFrame_PlaneSegmentation_gound_initial.cpp  LidarOdometerFrameToFrame.cpp  align.cpp
src/lib/lidar_odometry_lib/src/GicpLO/: GicpLO.cpp  align.cpp  kitti.cpp
src/lib/lidar_odometry_lib/src/GicpLO/fast_gicp/cuda/: fast_vgicp_cuda.cu
src/lib/lidar_odometry_lib/src/GicpLO/fast_gicp/gicp/: fast_gicp.cpp  fast_gicp_st.cpp  fast_vgicp.cpp  fast_vgicp_cuda.cpp
src/lib/lidar_odometry_lib/src/GicpLO/fast_gicp/gicp/experimental/: fast_gicp_mp.cpp
src/lib/lidar_odometry_lib/src/LeGO-LOAM/: featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp  transformFusion.cpp
src/lib/lidar_odometry_lib/src/NdtLO/: NdtLO.cpp
src/lib/lidar_odometry_lib/src/NdtLO/pclomp/: gicp_omp.cpp  ndt_omp.cpp  voxel_grid_covariance_omp.cpp
src/lib/lidar_odometry_lib/src/TeaserLO/: TeaserFeaturesLO.cpp  TeaserLO.cpp
src/lib/lidar_odometry_lib/src/lidar_odometry/: ImageProjector.cpp  LidarFrame.cpp  point_cloud_analysis.cpp
src/lib/visual_lidar_odometry_lib/: CMakeLists.txt  README.md  package.xml
src/lib/visual_lidar_odometry_lib/include/: VisualLidarFrame.hpp  VisualLidarFusionFrame.hpp
src/lib/visual_lidar_odometry_lib/include/ColorBasedVLO/: ColorBasedVLO.hpp
src/lib/visual_lidar_odometry_lib/include/ComboVLO/: ComboVLO.hpp
src/lib/visual_lidar_odometry_lib/include/FeatureFusionVLO/: FeatureFusionMatcher.hpp  FeatureFusionVLO.hpp
src/lib/visual_lidar_odometry_lib/include/HuangsVLO/: HuangVLO.hpp  LidarOdometer1DOF.hpp
src/lib/visual_lidar_odometry_lib/include/VLO6dof/: VLO6dof.hpp
src/lib/visual_lidar_odometry_lib/include/VOwithScaleVLO/: VOwithScaleVLO.hpp
src/lib/visual_lidar_odometry_lib/src/: VisualLidarFrame.cpp  VisualLidarFusionFrame.cpp  multiplevlo.cpp
src/lib/visual_lidar_odometry_lib/src/ColorBasedVLO/: ColorBasedVLO.cpp
src/lib/visual_lidar_odometry_lib/src/ComboVLO/: ComboVLO.cpp
src/lib/visual_lidar_odometry_lib/src/FeatureFusionVLO/: FeatureFusionMatcher.cpp  FeatureFusionVLO.cpp
src/lib/visual_lidar_odometry_lib/src/HuangsVLO/: HuangVLO.cpp  LidarOdometer1DOF.cpp
src/lib/visual_lidar_odometry_lib/src/VLO6dof/: VLO6dof.cpp
src/lib/visual_lidar_odometry_lib/src/VOwithScaleVLO/: VOwithScaleVLO.cpp
src/lib/visual_odometry_lib/: CMakeLists.txt  README.md  package.xml
src/lib/visual_odometry_lib/include/: IVisualOdometer.hpp  VO_FrameToFrame_5point.hpp  VO_PnP.hpp
src/lib/visual_odometry_lib/include/geometry/: Camera.hpp
src/lib/visual_odometry_lib/include/utils/: conversions.hpp
src/lib/visual_odometry_lib/include/visual_odometry/: FeatureDetector.hpp  FeatureMatcher.hpp  Map.hpp  MapPoint.hpp  VisualFrame.hpp
src/lib/visual_odometry_lib/src/: IVisualOdometer.cpp  VO_FrameToFrame_5point.cpp  VO_PnP.cpp
src/lib/visual_odometry_lib/src/geometry/: Camera.cpp
src/lib/visual_odometry_lib/src/utils/: conversions.cpp
src/lib/visual_odometry_lib/src/visual_odometry/: FeatureDetector.cpp  FeatureMatcher.cpp  Map.cpp  MapPoint.cpp  VisualFrame.cpp
src/utils/kitti_read_utils/: CMakeLists.txt  package.xml
src/utils/kitti_read_utils/src/: Laserscan.cpp  Laserscan.h  kitti_utils.cpp  kitti_utils.h  main.cpp  string_utils.cpp
