<?xml version="1.0"?>
<package format="2">
  <name>kitti_read_utils</name>
  <version>0.1.0</version>
  <description>kitti_read_utils</description>
  <maintainer email="s7anrein@uni-bonn.de">Andrzej Reinke</maintainer>
  <author email="s7anrein@uni-bonn.de">Andrzej Reinke</author>
    <license>GNU GPLv3</license>
<buildtool_depend>catkin</buildtool_depend>

</package>
